--- a/Maths.ipynb
+++ b/Maths.ipynb
@@ -62,6 +62,7 @@
    "metadata": {},
    "source": [
     "# $$ \\text{Variational AutoEncoders} $$\n",
+    "\n",
     "We wish to achieve two goals:\n",
     "1. **Learning Abstraction** $\\to$ A hidden representation given the input $P(z | X)$ - this is achived by the **Encoder** $Q_{\\theta}(z | X)$.\n",
     "2. **Generation** $\\to$ given some hidden representation using the **Decoder** $P_{\\phi}(X | z)$.\n",
@@ -70,6 +71,10 @@
     "\n",
     "$$ P(z | X) = \\frac{P(X | z) \\cdot P(z)}{P(X)} $$\n",
     "But since $P(X) = \\int P(X | z) \\cdot P(z) dz = \\int \\int \\dots \\int P(X | z_1, z_2, \\dots z_n) \\cdot P(z_1, z_2, \\dots z_n) dz_1 \\cdot dz_2 \\dots dz_n$ is **intractable**.\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "<img src=\"./Media/VAE.png\" style=\"width:40%; border:0;\">\n",
+    "</p>\n",
     "\n",
     "Hence instead, we assume the posterior distribution $P(z | X)$ as $Q_{\\theta}(z | X)$. Further assume that $Q_{\\theta}(z | X)$ is a **Gaussian** whose parameters are determined by our neural network $\\to$ **Encoder**.\n",
     "\n",
