final color added

--- a/Maths.ipynb
+++ b/Maths.ipynb
@@ -96,7 +96,7 @@
     "\n",
     "since $\\color{red}{D_{KL} \\left(Q_{\\theta}(z | X) \\parallel P(z | X) \\right) \\ge 0}$ and $\\color{blue}{\\mathbb{E}_Q \\left[ \\log (P(X | z)) \\right] - D_{KL} \\left(Q_{\\theta}(z | X) \\parallel P(z) \\right)}$ $\\le \\log(P(X))$. And since the final task is maximising the log-likelihood of $P(X)$, hence it is equivalent to maximizing the $\\color{blue}{\\text{Blue Term}}$. So, the final objective is\n",
     "\n",
-    "### $$ \\mathcal{L}(\\theta, \\phi) = \\max_{\\theta, \\phi} \\left\\{ \\mathbb{E}_Q \\left[ \\log (P_{\\phi}(X | z)) \\right] - D_{KL} \\left(Q_{\\theta}(z | X) \\parallel P(z) \\right) \\right \\} $$\n",
+    "### $$ \\color{green}{\\mathcal{L}(\\theta, \\phi) = \\max_{\\theta, \\phi} \\left\\{ \\mathbb{E}_Q \\left[ \\log (P_{\\phi}(X | z)) \\right] - D_{KL} \\left(Q_{\\theta}(z | X) \\parallel P(z) \\right) \\right \\}} $$\n",
     "\n",
     "Now clearly all the terms are within our reach. To get the KL divergence, we make a forward pass through the **Encoder** to get $Q_{\\theta}(z | X)$ and we know $P(z)$\n",
     "$$ Q_{\\theta}(z | X) \\sim \\mathcal{N}(\\boldsymbol{\\mu_z}(X), \\Sigma_z(X)) $$\n",
