--- a/Maths.ipynb
+++ b/Maths.ipynb
@@ -100,13 +100,38 @@
     "\n",
     "Now clearly all the terms are within our reach. To get the KL divergence, we make a forward pass through the **Encoder** to get $Q_{\\theta}(z | X)$ and we know $P(z)$\n",
     "$$ Q_{\\theta}(z | X) \\sim \\mathcal{N}(\\boldsymbol{\\mu_z}(X), \\Sigma_z(X)) $$\n",
-    "$$ P(z) \\sim \\mathcal{N}(\\mathbf{0}, I) $$\n"
+    "$$ P(z) \\sim \\mathcal{N}(\\mathbf{0}, I) $$\n",
+    "\n",
+    "So, one half of the loss function is easily computable as:\n",
+    "\n",
+    "$$ D_{KL} \\left(Q_{\\theta}(z | X) \\parallel P(z) \\right) = \\frac{1}{2} \\left[ \\boldsymbol{\\mu_z}^T(X) \\boldsymbol{\\mu_z}(X) + tr \\left\\{ \\Sigma_z (X) \\right\\} - k - \\log |\\Sigma_z(X)| \\right] $$\n",
+    "\n",
+    "Now the second part for the decoder, we'll approximate the expectation with a single $z$ drawn sampled from $Q_{\\theta}(z | X)$. Assume again that $P(X | z)$ as Gaussian with mean $\\mu(z)$ and unit variance.\n",
+    "\n",
+    "\n",
+    "### $$ \\boldsymbol{\\mu} = f_{\\phi}(z) $$\n",
+    "\n",
+    "Hence the log-likelihood of the $P(X = x_i | z)$ can be written as:\n",
+    "\n",
+    "$$ \\log(P(X = x_i | z)) = C - \\frac{1}{2} || X_i - f_{\\phi}(z)||^2 $$\n",
+    "\n",
+    "Hence the overall loss function is\n",
+    "\n",
+    "### $$ \\min_{\\theta, \\phi} \\left\\{ || X_i - f_{\\phi}(z)||^2 + \\frac{1}{2} \\left[ \\boldsymbol{\\mu_z}^T(X) \\boldsymbol{\\mu_z}(X) + tr \\left\\{ \\Sigma_z (X) \\right\\} - k - \\log |\\Sigma_z(X)| \\right] \\right\\} $$\n",
+    "\n",
+    "Now, in order for back propogation algorithm to work, we introduce the continuity in the sampling of $z$ by moving the sampling process to an input layer this is done first by sampling from a Standard Gaussian $\\epsilon \\sim \\mathcal{N}(0, I)$ and then obtaing $z$ with the required $\\boldsymbol{\\mu_z}(X), \\Sigma_z(X)$\n",
+    "\n",
+    "$$ z = \\boldsymbol{\\mu_z}(X) + \\Sigma_z(X) \\times \\epsilon $$\n",
+    "\n",
+    "Hence, the randomness has been shifted to $\\epsilon$ and not the $X$ or the parameters of the model.\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "<img src=\"./Media/FinalVAE.png\" style=\"width:40%; border:0;\">\n",
+    "</p>\n",
+    "\n",
+    "### Generation Part\n",
+    "After the model parameters are learned we **remove** the **encoder** and feed a $z \\sim \\mathcal{N}(0, I)$ to the decoder. The decoder will then predict $f_{\\phi}(z)$ and we can draw an $X \\sim \\mathcal{N}(f_{\\phi}(z), I)$.\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
