--- a/LatentDiff.ipynb
+++ b/LatentDiff.ipynb
@@ -89,6 +89,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Latent Diffusion Models**\n",
+    "\n",
+    "### The idea is to train the diffusion models on a low dimensional latent representation rather than the entire big pixel space. In addition to that, also train an Encoder-Decoder model that takes the original image converts it into the latent representation using the encoder and reconverts the latent representation to the reconstructed image.\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "<img src=\"./Media/Latent1.png\" style=\"width:60%;border:0;\" alt = \"image\">\n",
+    "</p>\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "<img src=\"./Media/Latent2.png\" style=\"width:60%;border:0;\" alt = \"image\">\n",
+    "</p>\n",
+    "\n",
+    "### The downside is that although the $L1/L2$ reconstruction loss might be low, the perceptual features in the reconstructed image still might be **fuzzy**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Perceptual Retention & $\\text{LPIPS}$ as the metric\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "<img src=\"./Media/Percept.png\" style=\"width:80%;border:0;\" alt = \"image\">\n",
+    "</p>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
