latent diffusion models media added

--- a/LatentDiff.ipynb
+++ b/LatentDiff.ipynb
@@ -97,14 +97,50 @@
     "### The idea is to train the diffusion models on a low dimensional latent representation rather than the entire big pixel space. In addition to that, also train an Encoder-Decoder model that takes the original image converts it into the latent representation using the encoder and reconverts the latent representation to the reconstructed image.\n",
     "\n",
     "<p align=\"center\">\n",
-    "<img src=\"./Media/Latent1.png\" style=\"width:60%;border:0;\" alt = \"image\">\n",
-    "</p>\n",
-    "\n",
-    "<p align=\"center\">\n",
     "<img src=\"./Media/Latent2.png\" style=\"width:60%;border:0;\" alt = \"image\">\n",
     "</p>\n",
     "\n",
     "### The downside is that although the $L1/L2$ reconstruction loss might be low, the perceptual features in the reconstructed image still might be **fuzzy**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Discretizing the Latent Space using the $\\text{CodeBooks}$ from $\\text{VQVAEs}$\n",
+    "### $\\text{VQVAE}$ as the $\\text{AutoEncoder}$\n",
+    "\n",
+    "$k$ vectors, each of $d$ dimensions $(k \\times d)$ help us encode the data.\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "<img src=\"./Media/VQVAE1.png\" style=\"width:70%;border:0;\" alt = \"image\">\n",
+    "</p>\n",
+    "\n",
+    "The encoder generates a feature map of $H \\times W$ features each of $d$ dimension.\n",
+    "<p align=\"center\">\n",
+    "<img src=\"./Media/VQVAE2.png\" style=\"width:70%;border:0;\" alt = \"image\">\n",
+    "</p>\n",
+    "\n",
+    "For each of the features, we find the nearest $d$ dimensional encoding to it and replace it with that.\n",
+    "\n",
+    "$$ z_q(x) = e_k $$\n",
+    "$$ k = \\argmin_j || z_e(x) - e_j ||_2 $$\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "<img src=\"./Media/VQVAE3.png\" style=\"width:70%;border:0;\" alt = \"image\">\n",
+    "</p>\n",
+    "\n",
+    "The decoder then discards off the feature map given by the encoder and only uses the nearest codeblock feature map to reconstruct the output image.\n",
+    "<p align=\"center\">\n",
+    "<img src=\"./Media/VQVAE4.png\" style=\"width:70%;border:0;\" alt = \"image\">\n",
+    "</p>\n",
+    "\n",
+    "The issue is we have to define the gradients for the $\\argmin$ step separately for the gradients to flow back. We approximate the gradient similar to the straight-through estimator and just copy gradients from decoder input $z_q(x)$ to encoder output $z_e(x)$\n",
+    "<p align=\"center\">\n",
+    "<img src=\"./Media/VQVAE5.png\" style=\"width:70%;border:0;\" alt = \"image\">\n",
+    "</p>\n",
+    "\n",
+    "$$ L = \\log p(x | z_q(x)) + || \\text{sg}[z_e(x)] - e ||_2^2 + \\beta || z_e(x) - \\text{sg}[e] ||_2^2 $$"
    ]
   },
   {
@@ -116,6 +152,19 @@
     "<p align=\"center\">\n",
     "<img src=\"./Media/Percept.png\" style=\"width:80%;border:0;\" alt = \"image\">\n",
     "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p align=\"center\">\n",
+    "<img src=\"./Media/Latent3.png\" style=\"width:70%;border:0;\" alt = \"image\">\n",
+    "</p>\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "<img src=\"./Media/Latent4.png\" style=\"width:70%;border:0;\" alt = \"image\">\n",
+    "</p>\n"
    ]
   },
   {
