lpips added in notebook

--- a/LatentDiff.ipynb
+++ b/LatentDiff.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cuda\n"
+      "cpu\n"
      ]
     }
    ],
@@ -151,7 +151,151 @@
     "\n",
     "<p align=\"center\">\n",
     "<img src=\"./Media/Percept.png\" style=\"width:80%;border:0;\" alt = \"image\">\n",
-    "</p>"
+    "</p>\n",
+    "\n",
+    "CLearly as said that although the $L_1$ or $L_2$ reconstruction loss might be low for the image, yet the perceptual features in the image perceived by a human are still **blurry**. Now in order to understand how a model would perceive the image, there is no better place to dig into pretrained classification **CNNs** $\\to$ **VGGs**. The goal is to bring the feature map extracted at each VGG layer to be very similar to the original image's feature maps at each VGG layer. This distance metric between the feature maps extracted from the layers of a pretrained VGG is called the **perceptual loss**.\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "<img src=\"./Media/LPIPS1.png\" style=\"width:80%;border:0;\" alt = \"image\">\n",
+    "</p>\n",
+    "\n",
+    "Check out the original implementation too at [Perceptual Similarity](https://github.com/richzhang/PerceptualSimilarity)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lpips.py implementation\n",
+    "from collections import namedtuple\n",
+    "\n",
+    "def spatial_average(in_tens, keepdim = True):\n",
+    "    return in_tens.mean([2, 3], keepdim = keepdim)\n",
+    "\n",
+    "\n",
+    "class vgg16(nn.Module):\n",
+    "    def __init__(self, requires_grad = False, pretrained = True):\n",
+    "        super().__init__()\n",
+    "        vgg_pretrained_features = models.vgg16(pretrained = pretrained).features\n",
+    "        self.slice1 = nn.Sequential()\n",
+    "        self.slice2 = nn.Sequential()\n",
+    "        self.slice3 = nn.Sequential()\n",
+    "        self.slice4 = nn.Sequential()\n",
+    "        self.slice5 = nn.Sequential()\n",
+    "        self.N_slices = 5\n",
+    "        for x in range(4):\n",
+    "            self.slice1.add_module(str(x), vgg_pretrained_features[x])\n",
+    "            \n",
+    "        for x in range(4, 9):\n",
+    "            self.slice2.add_module(str(x), vgg_pretrained_features[x])\n",
+    "        \n",
+    "        for x in range(9, 16):\n",
+    "            self.slice3.add_module(str(x), vgg_pretrained_features[x])\n",
+    "        \n",
+    "        for x in range(16, 23):\n",
+    "            self.slice4.add_module(str(x), vgg_pretrained_features[x])\n",
+    "        \n",
+    "        for x in range(23, 30):\n",
+    "            self.slice5.add_module(str(x), vgg_pretrained_features[x])\n",
+    "        \n",
+    "        # Freeze the model\n",
+    "        if requires_grad == False:\n",
+    "            for param in self.parameters():\n",
+    "                param.requires_grad = False\n",
+    "    \n",
+    "    def forward(self, X):\n",
+    "        h = self.slice1(X)\n",
+    "        h_relu1_2 = h\n",
+    "        h = self.slice2(h)\n",
+    "        h_relu2_2 = h\n",
+    "        h = self.slice3(h)\n",
+    "        h_relu3_3 = h\n",
+    "        h = self.slice4(h)\n",
+    "        h_relu4_3 = h\n",
+    "        h = self.slice5(h)\n",
+    "        h_relu5_3 = h\n",
+    "        vgg_outputs = namedtuple(\"VggOutputs\", [\"relu1_2\", \"relu2_2\", \"relu3_3\", \"relu4_3\", \"relu5_3\"])\n",
+    "        out = vgg_outputs(h_relu1_2, h_relu2_2, h_relu3_3, h_relu4_3, h_relu5_3)\n",
+    "        return out\n",
+    "    \n",
+    "    \n",
+    "class ScalingLayer(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        # mean = [0.485, 0.456, 0.406]\n",
+    "        # std = [0.229, 0.224, 0.225]\n",
+    "        self.register_buffer(\"shift\", torch.tensor([-.030, -.088, -.188])[None, :, None, None])\n",
+    "        self.register_buffer(\"scale\", torch.tensor([.458, .448, .450])[None, :, None, None])\n",
+    "    \n",
+    "    def forward(self, inp):\n",
+    "        return (inp - self.shift) / self.scale\n",
+    "\n",
+    "class NetLinLayer(nn.Module):\n",
+    "    def __init__(self, chn_in, chn_out = 1, use_dropout = False):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        layers = [nn.Dropout(), ] if (use_dropout) else []\n",
+    "        layers += [nn.Conv2d(chn_in, chn_out, kernel_size = 1, stride = 1, padding = 0, bias = False), ]\n",
+    "        self.model = nn.Sequential(*layers)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        return self.model(x)\n",
+    "\n",
+    "class LPIPS(nn.Module):\n",
+    "    def __init__(self, net = \"vgg\", version = \"0.1\", use_dropout = True):\n",
+    "        super().__init__()\n",
+    "        self.scaling_layer = ScalingLayer()\n",
+    "        \n",
+    "        self.chns = [64, 128, 256, 512, 512]\n",
+    "        self.L = len(self.chns)\n",
+    "        self.net = vgg16(pretrained = True, requires_grad = False)\n",
+    "        \n",
+    "        self.lin0 = NetLinLayer(self.chns[0], use_dropout = use_dropout)\n",
+    "        self.lin1 = NetLinLayer(self.chns[1], use_dropout = use_dropout)\n",
+    "        self.lin2 = NetLinLayer(self.chns[2], use_dropout = use_dropout)\n",
+    "        self.lin3 = NetLinLayer(self.chns[3], use_dropout = use_dropout)\n",
+    "        self.lin4 = NetLinLayer(self.chns[4], use_dropout = use_dropout)\n",
+    "        self.lins = [self.lin0, self.lin1, self.lin2, self.lin3, self.lin4]\n",
+    "        self.lins = nn.ModuleList(self.lins)\n",
+    "        \n",
+    "        import inspect\n",
+    "        \n",
+    "        model_path = os.path.abspath(\n",
+    "            os.path.join(inspect.getfile(self.__init__), \"..\", \"weights/v%s/%s.pth\" % (version, net))\n",
+    "        )\n",
+    "        print(\"Loading model from: %s\" % model_path)\n",
+    "        self.net.load_state_dict(torch.load(model_path, map_location = device), strict = False)\n",
+    "        \n",
+    "        self.eval()\n",
+    "        \n",
+    "        for param in self.parameters():\n",
+    "            param.requires_grad = False\n",
+    "        \n",
+    "    \n",
+    "    def forward(self, in0, in1, normalize = False):\n",
+    "        if normalize:\n",
+    "            in0 = 2 * in0 - 1\n",
+    "            in1 = 2 * in1 - 1\n",
+    "        \n",
+    "        in0_input, in1_input = self.scaling_layer(in0), self.scaling_layer(in1)\n",
+    "        \n",
+    "        outs0, outs1 = self.net.forward(in0_input), self.net.forward(in1_input)\n",
+    "        \n",
+    "        feats0, feats1, diffs = {}, {}, {}\n",
+    "        \n",
+    "        for kk in range(self.L):\n",
+    "            feats0[kk], feats1[kk] = F.normalize(outs0[kk], dim = 1), F.normalize(outs1[kk])\n",
+    "            diffs[kk] = (feats0[kk] - feats1[kk]) ** 2\n",
+    "        \n",
+    "        res = [spatial_average(self.lins[kk](diffs[kk]), keepdim = True) for kk in range(self.L)]\n",
+    "        val = 0\n",
+    "        \n",
+    "        for l in range(self.L):\n",
+    "            val += res[l]\n",
+    "        \n",
+    "        return val"
    ]
   },
   {
@@ -191,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
