--- a/LatentDiff.ipynb
+++ b/LatentDiff.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cuda\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import random\n",
@@ -39,53 +31,6 @@
     "    device = torch.device(\"cpu\")\n",
     "\n",
     "print(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Train Parameters\n",
-    "batch_size = 64\n",
-    "num_epochs = 40\n",
-    "lr = 1e-4\n",
-    "num_grid_rows = 8\n",
-    "num_samples = 64\n",
-    "\n",
-    "# Diffusion Parameters\n",
-    "beta_start = 1e-4\n",
-    "beta_end = 0.02\n",
-    "T = 1000\n",
-    "\n",
-    "# Model Parameters\n",
-    "nc = 3\n",
-    "image_size = 32"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transform = transforms.Compose([transforms.Resize(image_size), transforms.CenterCrop(image_size), transforms.ToTensor(), transforms.Normalize([0.5 for _ in range(nc)], [0.5 for _ in range(nc)])])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "celebADataset = datasets.ImageFolder(root = \"../CelebA\", transform = transform)\n",
-    "celebALoader = DataLoader(dataset = celebADataset, batch_size = batch_size, shuffle = True)\n",
-    "\n",
-    "mnist_train = datasets.MNIST(root = \"../\", train = True, transform = transform, download = True)\n",
-    "mnist_test = datasets.MNIST(root = \"../\", train = False, transform = transform, download = True)\n",
-    "\n",
-    "mnist_combined_loader = DataLoader(dataset = mnist_train + mnist_test, batch_size = batch_size, shuffle = True)"
    ]
   },
   {
@@ -305,6 +250,14 @@
     "## The AutoEncoder Architecture\n",
     "\n",
     "<p align=\"center\">\n",
+    "<img src=\"./Media/Latent3.png\" style=\"width:80%;border:0;\" alt = \"image\">\n",
+    "</p>\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "<img src=\"./Media/Latent4.png\" style=\"width:80%;border:0;\" alt = \"image\">\n",
+    "</p>\n",
+    "\n",
+    "<p align=\"center\">\n",
     "<img src=\"./Media/AutoEnc1.png\" style=\"width:80%;border:0;\" alt = \"image\">\n",
     "</p>\n",
     "\n",
@@ -337,11 +290,9 @@
    "source": [
     "# Time Embedding\n",
     "\n",
-    "def get_time_embedding(time_steps, temb_dim):\n",
-    "    factor = 10000 ** ((torch.arange(\n",
-    "        start = 0, end = temb_dim // 2, dtype = torch.float32, device = time_steps.device) / (temb_dim // 2))\n",
-    "    )\n",
-    "    t_emb = time_steps[:, None].repeat(1, temb_dim // 2) / factor\n",
+    "def get_time_embedding(T, d_model):\n",
+    "    factor = 10000 ** ((torch.arange(start = 0, end = d_model // 2, dtype = torch.float32, device = T.device)) / (d_model // 2))\n",
+    "    t_emb = T[:, None].repeat(1, d_model // 2) / factor\n",
     "    t_emb = torch.cat([torch.sin(t_emb), torch.cos(t_emb)], dim = -1)\n",
     "    return t_emb\n",
     "\n",
@@ -928,7 +879,17 @@
     "        # x -> B*H*W, C\n",
     "        x = x.reshape((-1, x.size(-1)))\n",
     "        commitment_loss = torch.mean((quant_out.detach() - x) ** 2)\n",
-    "        # codebook_loss\n",
+    "        codebook_loss = torch.mean((quant_out - x.detach()) ** 2)\n",
+    "        quantize_losses = {\n",
+    "            \"codebook_loss\" : codebook_loss,\n",
+    "            \"commitment_loss\" : commitment_loss\n",
+    "        }\n",
+    "        \n",
+    "        quant_out = x + (quant_out - x).detach()\n",
+    "        quant_out = quant_out.reshape((B, H, W, C)).permute(0, 3, 1, 2)\n",
+    "        \n",
+    "        return quant_out, quantize_losses\n",
+    "        \n",
     "    \n",
     "    def encode(self, x):\n",
     "        out = self.encoder_conv_in(x)\n",
@@ -946,7 +907,19 @@
     "        return out, quant_losses\n",
     "    \n",
     "    def decode(self, z):\n",
-    "        pass\n",
+    "        out = z\n",
+    "        out = self.post_quant_conv(out)\n",
+    "        out = self.decoder_conv_in(out)\n",
+    "        for mid in self.decoder_mids:\n",
+    "            out = mid(out)\n",
+    "        \n",
+    "        for up in self.decoder_ups:\n",
+    "            out = up(out)\n",
+    "            \n",
+    "        out = self.decoder_norm_out(out)\n",
+    "        out = nn.SiLU()(out)\n",
+    "        out = self.decoder_conv_out(out)\n",
+    "        return out\n",
     "    \n",
     "    def forward(self, x):\n",
     "        z, quant_losses = self.encode(x)\n",
@@ -958,13 +931,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p align=\"center\">\n",
-    "<img src=\"./Media/Latent3.png\" style=\"width:70%;border:0;\" alt = \"image\">\n",
-    "</p>\n",
-    "\n",
-    "<p align=\"center\">\n",
-    "<img src=\"./Media/Latent4.png\" style=\"width:70%;border:0;\" alt = \"image\">\n",
-    "</p>\n"
+    "### Discriminator"
    ]
   },
   {
@@ -972,6 +939,94 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "class Discriminator(nn.Module):\n",
+    "    r\"\"\"\n",
+    "    PatchGAN Discriminator.\n",
+    "    Rather than taking IMG_CHANNELSxIMG_HxIMG_W all the way to\n",
+    "    1 scalar value , we instead predict grid of values.\n",
+    "    Where each grid is prediction of how likely\n",
+    "    the discriminator thinks that the image patch corresponding\n",
+    "    to the grid cell is real\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __init__(self, im_channels=3,\n",
+    "                 conv_channels=[64, 128, 256],\n",
+    "                 kernels=[4,4,4,4],\n",
+    "                 strides=[2,2,2,1],\n",
+    "                 paddings=[1,1,1,1]):\n",
+    "        super().__init__()\n",
+    "        self.im_channels = im_channels\n",
+    "        activation = nn.LeakyReLU(0.2)\n",
+    "        layers_dim = [self.im_channels] + conv_channels + [1]\n",
+    "        self.layers = nn.ModuleList([\n",
+    "            nn.Sequential(\n",
+    "                nn.Conv2d(layers_dim[i], layers_dim[i + 1],\n",
+    "                          kernel_size=kernels[i],\n",
+    "                          stride=strides[i],\n",
+    "                          padding=paddings[i],\n",
+    "                          bias=False if i !=0 else True),\n",
+    "                nn.BatchNorm2d(layers_dim[i + 1]) if i != len(layers_dim) - 2 and i != 0 else nn.Identity(),\n",
+    "                activation if i != len(layers_dim) - 2 else nn.Identity()\n",
+    "            )\n",
+    "            for i in range(len(layers_dim) - 1)\n",
+    "        ])\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        out = x\n",
+    "        for layer in self.layers:\n",
+    "            out = layer(out)\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train Parameters\n",
+    "batch_size = 16\n",
+    "\n",
+    "# Model Parameters\n",
+    "nc = 3\n",
+    "image_size = 256"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transform = transforms.Compose([transforms.Resize(image_size), transforms.CenterCrop(image_size), transforms.ToTensor(), transforms.Normalize([0.5 for _ in range(nc)], [0.5 for _ in range(nc)])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "celebADataset = datasets.ImageFolder(root = \"../CelebA\", transform = transform)\n",
+    "celebALoader = DataLoader(dataset = celebADataset, batch_size = batch_size, shuffle = True)\n",
+    "\n",
+    "mnist_train = datasets.MNIST(root = \"../\", train = True, transform = transform, download = True)\n",
+    "mnist_test = datasets.MNIST(root = \"../\", train = False, transform = transform, download = True)\n",
+    "\n",
+    "mnist_combined_loader = DataLoader(dataset = mnist_train + mnist_test, batch_size = batch_size, shuffle = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
@@ -991,7 +1046,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
